--- a/src/Common/Common.vcxproj
+++ b/src/Common/Common.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
+    <ClInclude Include="config.h" />
     <ClInclude Include="encoding.h" />
   </ItemGroup>
   <ItemGroup>
