--- a/src/Common/Common.vcxproj
+++ b/src/Common/Common.vcxproj
@@ -22,9 +22,11 @@
     <ClInclude Include="common.h" />
     <ClInclude Include="config.h" />
     <ClInclude Include="encoding.h" />
+    <ClInclude Include="random.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="encoding.cpp" />
+    <ClCompile Include="random.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
