--- a/src/Common/Common.vcxproj
+++ b/src/Common/Common.vcxproj
@@ -26,6 +26,7 @@
     <ClInclude Include="random.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="color.cpp" />
     <ClCompile Include="encoding.cpp" />
     <ClCompile Include="random.cpp" />
   </ItemGroup>
