--- a/src/Tests/Tests.vcxproj.filters
+++ b/src/Tests/Tests.vcxproj.filters
@@ -15,10 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Tests.cpp">
+    <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp">
+    <ClCompile Include="CommonColorTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CommonEncodingTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
