--- a/src/Tests/Tests.vcxproj.filters
+++ b/src/Tests/Tests.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="CommonEncodingTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CommonTextTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
