--- a/src/Tests/Tests.vcxproj
+++ b/src/Tests/Tests.vcxproj
@@ -161,6 +161,7 @@
   <ItemGroup>
     <ClCompile Include="CommonColorTests.cpp" />
     <ClCompile Include="CommonEncodingTests.cpp" />
+    <ClCompile Include="CommonTextTests.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
