Adding lfences and rdtscp to prevent instruction reordering

--- a/src/Benchmark/Benchmark.vcxproj
+++ b/src/Benchmark/Benchmark.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bench.cpp" />
     <ClCompile Include="Benchmark.cpp" />
   </ItemGroup>
   <ItemGroup>
