--- a/src/Benchmark/Benchmark.vcxproj.filters
+++ b/src/Benchmark/Benchmark.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="Benchmark.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="bench.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bench.h">
